# netscavator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appimage-build.sh  build.sh  conanfile.txt  install.sh  miner-release-update.sh  netcreator-appimage-build.sh  netcreator.desktop  netcreator.desktop.in  netscavator.desktop.in  php.ini.in  snapcraft-build.sh  snapcraft-pull.sh  snapcraft-stage.sh
code/cpp/: .svnignore  CMakeLists.txt  Copyright.txt  DoxyS.ignore  Doxyfile  ReadMe.txt  copy_system_php_extensions.sh  cpp.dir  crawler.qrc  creator.qrc  design.txt  env.bat  env.veriquin_cpp  miner-release-update.sh  phpDoxySfile  phpDoxyfile  qwebchannel.js  server-release-update.sh  update_miner_release.bat  veriquin_cpp.BuildConfig.cbs  veriquin_cpp.cbs
code/cpp/common_utils/: CMakeLists.txt  common_utils.cbs
code/cpp/crawl/: CMakeLists.txt  Crawler.cpp  Crawler.h  KeepActiveThread.cpp  KeepActiveThread.h  MinerWorker.cpp  MinerWorker.h  ScriptMiner.cpp  ScriptMiner.h  crawl.cbs  crawl.dir
code/cpp/crawl/_test/: home_search_listing.html  home_search_listing_last.html  test_crawl.cpp
code/cpp/crawl/applicationutils/: CrawlerCommandQueue.cpp  CrawlerCommandQueue.h  QtHttpDownloader.cpp  QtHttpDownloader.h  qt_compression.cpp  qt_compression.h
code/cpp/crawl/containers/: DomActionMgr.cpp  DomActionMgr.h  DomSearchMgr.cpp  DomSearchMgr.h  LookForWordMgr.cpp  LookForWordMgr.h  ModifierMgr.cpp  ModifierMgr.h  NetworkActivityLogger.cpp  NetworkActivityLogger.h  SettingsMgr.cpp  SettingsMgr.h  UrlQueue.cpp  UrlQueue.h  WordMonitor.cpp  WordMonitor.h  queues.dir
code/cpp/crawl/creatorutils/: DomTreeTextHtmlGen.cpp  DomTreeTextHtmlGen.h
code/cpp/crawl/locale/: default_locales.cpp  default_locales.h
code/cpp/crawl/navigator/: AutoInputLocales.cpp  AutoInputLocales.h  AutoInputState.cpp  AutoInputState.h  DomClickNextState.cpp  DomClickNextState.h  DomNavigator.cpp  DomNavigator.h  DomPosClickState.cpp  DomPosClickState.h  DropDownSelectState.cpp  DropDownSelectState.h  InputOptionsState.cpp  InputOptionsState.h  JavascriptExecuteState.cpp  JavascriptExecuteState.h  NavigateStateBase.cpp  NavigateStateBase.h  NavigatorActionsClickAllExecutor.cpp  NavigatorActionsClickAllExecutor.h  NavigatorActionsExecutor.cpp  NavigatorActionsExecutor.h  SiteMapGetter.cpp  SiteMapGetter.h  UrlLoadState.h  (+5 more)
code/cpp/gui/: BrowserWidgetUi.cpp  BrowserWidgetUi.h  CMakeLists.txt  CrawlerMainWindowUi.cpp  CrawlerMainWindowUi.h  CrawlerSimple.cpp  CrawlerSimple.h  CreatorDomTableView.cpp  CreatorDomTableView.h  CreatorLinearDomTableModel.cpp  CreatorLinearDomTableModel.h  CreatorMainWidgetUi.cpp  CreatorMainWidgetUi.h  CreatorMainWindowUi.cpp  CreatorMainWindowUi.h  CreatorTextDomTreeView.cpp  CreatorTextDomTreeView.h  CreatorWebkitWebViewUi.cpp  CreatorWebkitWebViewUi.h  DebugToolBarUI.cpp  DebugToolBarUI.h  DesignWidgetUi.cpp  DesignWidgetUi.h  DomSeqWidget.cpp  DomSeqWidget.h  DomSequencesTreeModel.cpp  DomSequencesTreeModel.h  DomSequencesTreeViewUi.cpp  DomSequencesTreeViewUi.h  DomTreeModel.cpp  DomTreeModel.h  DomTreePanelCtrl.cpp  DomTreePanelCtrl.h  DomTreeTextViewUi.cpp  DomTreeTextViewUi.h  DomTreeView.cpp  DomTreeView.h  EditorViewUi.cpp  EditorViewUi.h  EditorWidgetUi.cpp  (+57 more)
code/cpp/htmlparser/: CMakeLists.txt  config.h  htmlparser.cbs
code/cpp/images/: LibCrawlOverview.odg
code/cpp/interfaces/: BoxObjectIF.cpp  BoxObjectIF.h  BrowserIF.h  BrowserViewIF.cpp  BrowserViewIF.h  CMakeLists.txt  Configuration.cpp  Configuration.h  DataWriterIF.cpp  DataWriterIF.h  DomEventIF.cpp  DomEventIF.h  DomKeyEventIF.cpp  DomKeyEventIF.h  DomMouseEventIF.cpp  DomMouseEventIF.h  DomNodeIF.cpp  DomNodeIF.h  Factory.cpp  Factory.h  Globals.cpp  Globals.h  LinearDomIF.cpp  LinearDomIF.h  MinerWorkerIF.cpp  MinerWorkerIF.h  NetscavatorFactoryIF.cpp  NetscavatorFactoryIF.h  QEventWrapper.cpp  QEventWrapper.h  ScriptMinerIF.cpp  ScriptMinerIF.h  ScriptingClassIF.cpp  ScriptingClassIF.h  SignalsManager.cpp  SignalsManager.h  SignalsManagerIF.cpp  SignalsManagerIF.h  WebBrowserIF.cpp  WebBrowserIF.h  (+6 more)
code/cpp/minergui/: CMakeLists.txt  minergui.cbs
code/cpp/minermanager/: CMakeLists.txt  minermanager.cbs  minermanager.cpp  minermanager.dir
code/cpp/netcreator/: CMakeLists.txt  netcreator.cpp
code/cpp/netscavator/: CMakeLists.txt  netscavator.cbs  netscavator.cpp
code/cpp/phpdocument/: CMakeLists.txt  phpdocument.cbs  phpdocument_utils.cpp  phpdocument_utils.h
code/cpp/powersave/: CMakeLists.txt  parsing_numbers_test.cpp  powersave.cbs  powersave.cpp
code/cpp/robot/: CMakeLists.txt  robot.cbs  robot.cfg.in  robot.cpp  robot2.cpp  robot_php.cpp
code/cpp/script_embedding/: CMakeLists.txt  script_embedding.cbs
code/cpp/scriptcrawl/: CMakeLists.txt  php-configure.txt  scriptcrawl.cbs  scriptcrawl.cpp  scriptcrawl.h  scriptcrawl.i  scriptcrawl_private.cpp  scriptcrawl_private.h  scriptcrawl_simple.i  scriptcrawl_simple.i.backup.txt
code/cpp/simplebrowser/: CMakeLists.txt  CreatorSimpleWebViewUi.cpp  CreatorSimpleWebViewUi.h  SimpleBrowser.cpp  SimpleBrowser.h  SimpleDomDocumentLinear.cpp  SimpleDomDocumentLinear.h  SimpleDomNode.cpp  SimpleDomNode.h  SimpleNetworkAccessManager.cpp  SimpleNetworkAccessManager.h  SimpleWebView.cpp  SimpleWebView.h  simplebrowser.cbs
code/cpp/test/: CMakeLists.txt  cmake.html  test.cbs
code/cpp/webbrowse/: CMakeLists.txt  MozBrowserGtk.cpp  MozBrowserGtk.h  MozBrowserQt.cpp  MozBrowserQt.h  MozBrowserWx.cpp  MozBrowserWx.h  MozBrowser_examples.cpp  SignalsManagerWx.cpp  SignalsManagerWx.h  browser_utils.h  gtkbrowser.cpp  gtkbrowser.h  webbrowse.cbs
code/cpp/webkitbrowser/: CMakeLists.txt  CancelLoadExample.cpp  WebChannelBridge.cpp  WebChannelBridge.h  WebKitBrowserQt.cpp  WebKitBrowserQt.h  WebKitCookieJar.cpp  WebKitCookieJar.h  WebKitDomDocumentLinearQt.cpp  WebKitDomDocumentLinearQt.h  WebKitDomNodeQt.cpp  WebKitDomNodeQt.h  WebkitNetworkAccessManagerQt.cpp  WebkitNetworkAccessManagerQt.h  webkitbrowser.cbs
code/cpp/wxutils/: CMakeLists.txt  wx_command_line.cpp  wx_command_line.h  wxutils.cbs
code/cpp/xulcrawler/: application.ini  chrome.manifest
(+813 files in other folders)
